# EnvClassify

./: README.md
controllers/: CMakeLists.txt
controllers/footbot_diffusion/: footbot_diffusion.cpp  footbot_diffusion.h
controllers/footbot_diffusion (copy)/: footbot_diffusion.cpp  footbot_diffusion.h
controllers/footbot_envclassify/: CMakeLists.txt  footbot_rnn_controller.cpp  footbot_rnn_controller.h
controllers/footbot_envclassify/nn/: neural_network.cpp  neural_network.h  rnn.cpp  rnn.h
controllers/footbot_envclassify_tf/: CMakeLists.txt  LSTMWrapper.cpp  LSTMWrapper.h  footbot_rnn_controller.cpp  footbot_rnn_controller.h
controllers/footbot_envclassify_tf/nn/: perceptron.cpp  rnn.cpp
controllers/footbot_nn_test/: CMakeLists.txt  footbot_nn_controller.cpp  footbot_nn_controller.h
controllers/footbot_nn_test/nn/: perceptron.h  rnn.cpp  rnn.h
embedding/: CMakeLists.txt
embedding/envclassify/: CMakeLists.txt  main.cpp
embedding/envclassify_tf/: CMakeLists.txt  experiment.cpp  experiment.hpp
embedding/galib_test/: CMakeLists.txt  main.cpp
experiments/: diffusion_10.argos  envclassify-trial.argos  envclassify.argos  galib-trial.argos  galib.argos  galib_test.argos  galib_test_trial.argos  obsavoidance.argos
loop_functions/: CMakeLists.txt
loop_functions/envclassify_loop_functions/: CMakeLists.txt  envclassify_loop_functions.cpp  envclassify_loop_functions.h
loop_functions/envclassify_loop_functions_tf/: CMakeLists.txt  envclassify_loop_functions_tf.cpp  envclassify_loop_functions_tf.h
loop_functions/galib_phototaxis_loop_functions_test/: CMakeLists.txt  galib_phototaxis_loop_functions.cpp  galib_phototaxis_loop_functions.h
python_code/: ArgosInterface.py  ArgosInterfaceObject.py  PO.py  actor.py  argos-wrapper.py  critic.py  ddpg.py  envclassify.argos  lstm_tf.py  main.py  plotResults.py  replay_buffer.py
