link_directories(${CMAKE_BINARY_DIR}/controllers/footbot_envclassify)

add_library(envclassify_loop_functions SHARED envclassify_loop_functions.cpp)
target_link_libraries(envclassify_loop_functions
  footbot_envclassify
  argos3core_simulator
  argos3plugin_simulator_dynamics2d
  argos3plugin_simulator_entities
  argos3plugin_simulator_footbot
  argos3plugin_simulator_genericrobot
  argos3plugin_simulator_media
  ${GALIB_LIBRARIES})

if(ARGOS_COMPILE_QTOPENGL)
  target_link_libraries(envclassify_loop_functions argos3plugin_simulator_qtopengl)
endif(ARGOS_COMPILE_QTOPENGL)
