link_directories(${CMAKE_BINARY_DIR}/controllers/footbot_envclassify_tf)

add_library(envclassify_loop_functions_tf SHARED envclassify_loop_functions_tf.cpp)
target_link_libraries(envclassify_loop_functions_tf
  footbot_envclassify_tf
  argos3core_simulator
  argos3plugin_simulator_dynamics2d
  argos3plugin_simulator_entities
  argos3plugin_simulator_footbot
  argos3plugin_simulator_genericrobot
  argos3plugin_simulator_media
  )

